2004-04-06  Seth Robertson  <seth@pearl.sysdetect.com>

	* perl/BkReportGen/helper_simplereports.pl
	(helper_simplereports($$$$$$)): Allow report errors to come out
	first.  Context be damned!

	* perl/BkReportGen/helper_ifconfig.pl (helper_ifconfig($$$$)): If
	we have interfaces defined in antura.conf, only report errors
	about those interfaces.

2004-03-11  Seth Robertson  <seth@pearl.sysdetect.com>

	* bin/quotexml: Program to quote xml (or html) from people who
	interpret such

2004-03-05  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/Conf.pm: Allow set_uniq_value to reset a commented out key.

2004-03-04  Seth Robertson  <seth@startide.sysdetect.com>

	* bin/BkReportGen: Generate warning messages if the output methods
	are invalid, instead of wierd eval errors.

2004-02-27  Seth Robertson  <seth@pearl.sysdetect.com>

	* Baka/Conf.pm: Handle more of standard bkconf notations.
	(e.g. "key=" "key = foo bar baz" etc)  RT 2970

2004-02-27  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/Conf.pm: Method to allow updates to simple single valued
	conf files.

2003-08-26  Seth Robertson  <seth@startide.sysdetect.com>

	* bin/genup*.pl: Set my copyright on these programs I wrote many years ago.

	* bin/Oligarchical: Program to monitor and control programs in various, evil, ways.

2003-01-01  Brian Lindauer  <lindauer@projector.sysdetect.com>

	* BkFileutils.pl: Intial import.
